--- a/themes/hipaper/layout/_partial/head.ejs
+++ b/themes/hipaper/layout/_partial/head.ejs
@@ -67,5 +67,6 @@
   <link rel="stylesheet" href="<%- config.root %>css/bootstrap.css" >
   <link rel="stylesheet" href="<%- config.root %>css/fashion.css" >
   <link rel="stylesheet" href="<%- config.root %>css/glyphs.css" >
+  <link rel="stylesheet" href="<%- config.root %>css/icomoon.css" >
 
 </head>
