Add new gh page post

--- a/themes/hipaper/source/css/_partial/article.styl
+++ b/themes/hipaper/source/css/_partial/article.styl
@@ -106,7 +106,7 @@
     margin-top: line-height
     margin-bottom: line-height
   img, video
-    max-width: 100%
+    width: 500px
     height: auto
     display: block
     margin: auto
