--- a/themes/hipaper/source/css/fashion.css
+++ b/themes/hipaper/source/css/fashion.css
@@ -1045,13 +1045,14 @@ ul.widget-tab-nav {
 .widget-entry-thumbnail {
 	position: relative;
 	float: left;
-	width: 50px;
+	max-width: 100px;
+	width: 100%;
 	height: 50px;
-	border: 1px solid #eee;
 	overflow: hidden;
+	/* border: 1px solid #eee; */
 	}
 .widget-entry-thumbnail img {
-	/* width: auto; */
+	width: auto;
 	height: 50px;
 	display: block;
 	transform: translate(-50%,-50%);
