--- a/themes/hipaper/layout/_partial/article.ejs
+++ b/themes/hipaper/layout/_partial/article.ejs
@@ -48,6 +48,7 @@
     </footer>
     <hr class="entry-footer-hr">
   </div>
+  <%- partial('ads/adsense') %>
   <% if (!index){ %>
     <%- partial('post/nav') %>
   <% } %>
