--- a/themes/hipaper/layout/_partial/sidebar.ejs
+++ b/themes/hipaper/layout/_partial/sidebar.ejs
@@ -2,4 +2,5 @@
   <% theme.widgets.forEach(function(widget){ %>
     <%- partial('_widget/' + widget) %>
   <% }) %>
+  <%- partial('ads/adsense') %>
 </aside>
