--- a/themes/hipaper/source/css/_partial/article.styl
+++ b/themes/hipaper/source/css/_partial/article.styl
@@ -106,7 +106,8 @@
     margin-top: line-height
     margin-bottom: line-height
   img, video
-    width: 500px
+    max-width: 500px
+    width: 100%
     height: auto
     display: block
     margin: auto
