--- a/themes/hipaper/source/css/fashion.css
+++ b/themes/hipaper/source/css/fashion.css
@@ -1131,6 +1131,7 @@ ul.widget-tab-nav {
 	}
 .widget-social-icons li a {
 	display: block;
+	padding-right: 10px;
 	}
 .widget-social-icons li a [class^="fa"]:before {
 	width: 40px;
